# secure-rpc

./: .gitignore  Cargo.toml  README.md
configs/local/: Default.toml
crates/json-rpc/: Cargo.toml
crates/json-rpc/src/: array_rpc_client.rs  client.rs  error.rs  eth_rpc_client.rs  lib.rs  types.rs
scripts/: 01_init.sh  02_run.sh  env.sh
scripts/execute/: 01_init_secure_rpc.sh  02_run_secure_rpc.sh  env.sh  env_example.sh
secure-rpc/: Cargo.toml
secure-rpc/src/: config.rs  error.rs  lib.rs  state.rs
secure-rpc/src/cli/: config.rs  config_option.rs  mod.rs
secure-rpc/src/client/: distributed_key_generation.rs  ethereum_rpc_client.rs  key_management_system.rs  mod.rs  rollup.rs  rollup_rpc_client.rs  secure_rpc_client.rs  sequencer.rs  sequencer_rpc_client.rs
secure-rpc/src/context/: interface.rs  mod.rs
secure-rpc/src/rpc/: decrypt_transaction.rs  encrypt_transaction.rs  mod.rs  request_to_send_encrypted_transaction.rs  request_to_send_raw_transaction.rs
secure-rpc/src/rpc/eth/: eth_block_number.rs  eth_call.rs  eth_chain_id.rs  eth_estimate_gas.rs  eth_fee_history.rs  eth_gas_price.rs  eth_get_balance.rs  eth_get_block_by_hash.rs  eth_get_block_by_number.rs  eth_get_code.rs  eth_get_transaction_count.rs  eth_get_transaction_receipt.rs  eth_net_version.rs  eth_send_raw_transaction.rs  mod.rs
secure-rpc/src/types/: mod.rs  signer.rs
secure-rpc/src/types/config/: config_path.rs
secure-rpc/src/types/transaction/: encrypted.rs  mod.rs  raw.rs
secure-rpc/src/types/transaction/encrypted_transaction/: eth_transaction.rs
src/: error.rs  lib.rs  state.rs
src/client/: mod.rs  rollup.rs
src/rpc/: decrypt_transaction.rs  encrypt_transaction.rs  mod.rs  send_encrypted_transaction.rs  send_raw_transaction.rs
src/rpc/eth/: eth_block_number.rs  eth_call.rs  eth_chain_id.rs  eth_estimate_gas.rs  eth_fee_history.rs  eth_gas_price.rs  eth_get_balance.rs  eth_get_block_by_hash.rs  eth_get_block_by_number.rs  eth_get_code.rs  eth_get_transaction_by_hash.rs  eth_get_transaction_count.rs  eth_get_transaction_receipt.rs  eth_net_version.rs  eth_send_raw_transaction.rs  mod.rs
src/types/config/: config_option.rs  config_path.rs  mod.rs
