[package]
name = "secure-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "secure-rpc"
path = "src/bin/secure-rpc.rs"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
rand = "0.8.5"
radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", tag = "v0.1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
sequencer = { git = "https://github.com/radiusxyz/sequencer", rev="76a55a547032c9156e57f7f3ad75ca24823632e8"}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.37.0", default-features = false }
toml = "0.8.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Encryption libraries
pvde = { git = "https://github.com/radiusxyz/pvde", rev="0abc447e775a52ecc5695cf070086fcad9cdaebb"}
skde = { git = "https://github.com/radiusxyz/skde", rev="13f18a4a6846795bb0ca20c4cd5ad494b7b6444f"}