[workspace]
members = [
    "crates/json-rpc",
    "secure-rpc",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.73"
futures = "0.3.30"
json-rpc = { path = "crates/json-rpc" }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.37.0", default-features = false }
toml = "0.8.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = "2.5.2"

pvde = { git = "https://github.com/radiusxyz/pvde", rev="0abc447e775a52ecc5695cf070086fcad9cdaebb"}
skde = { git = "https://github.com/radiusxyz/skde", rev="d46d66fa1e59aa5d555a1124cf3b89cef4753fd1"}

radius-sdk = { git = "https://github.com/radiusxyz/radius-sdk-rs", rev = "2ffe413fc990e8f38ea8fc76d5f4956c698c8b41", features = ["full"] }
# sequencer = { git = "https://github.com/radiusxyz/sequencer", rev="bd7347b38c8143769fbb7cfb76603d4cb3dad962"}
sequencer = { path = "../sequencer"}