[package]
name = "secure-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "secure-rpc"
path = "src/bin/secure_rpc.rs"

[dependencies]
futures = { workspace = true }
json-rpc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

alloy = { version = "0.1.1"}