[package]
name = "secure-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "secure-rpc"
path = "src/bin/secure_rpc.rs"

[dependencies]
futures = { workspace = true }
json-rpc = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
pvde = { workspace = true }
clap = { version = "4.4.7", features = ["derive"] }
sequencer = { workspace = true }
skde = { workspace = true }
radius-sdk = { workspace = true }