[package]
name = "json-rpc"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
jsonrpsee = { version = "0.22", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
radius-sdk = { workspace = true, feature = ["json-rpc"] }
url = { workspace = true }